# FrayedEnds

./: .buildinfo  .clang-format  .gitignore  .jekyllignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Singularity.def  automate_process_175743603.json  genindex.html  intro.html  markdown-notebooks.html  notebooks.html  pyproject.toml  search.html  searchindex.js  spinorbopt_1703.cpp  spinorbopt_ab_sep.cpp  spinorbopt_backup_functions.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci_basic.yml  deploy.yml
Block2/: H2minus.ipynb  H3lin.ipynb  H3lin_631g_alpha.molden  H3lin_631g_beta.molden  H3lin_sto3g_alpha.molden  H3lin_sto3g_beta.molden  H3tri.ipynb  HeH.ipynb  dmrg.ipynb  rhf_h2_test.ipynb
Block2/tmp/: F.MPS.GS.1  F.MPS.GS.2  F.MPS.INFO.GS.LEFT.2  F.MPS.INFO.GS.LEFT.3  F.MPS.INFO.GS.RIGHT.1  F.MPS.INFO.GS.RIGHT.2  F.MPS.INFO.GS.RIGHT.3  F.MPS.INFO.PDM-KET@TMP.LEFT.2  F.MPS.INFO.PDM-KET@TMP.RIGHT.0  F.MPS.INFO.PDM-KET@TMP.RIGHT.1  F.MPS.PDM-KET@TMP.-1  F.MPS.PDM-KET@TMP.0  F.MPS.PDM-KET@TMP.1  F0.PART.NPDM.NPDM.FRAG.0.fpc  F0.PART.NPDM.NPDM.FRAG.1.fpc
Examples/: minimal_example.py
Examples/BeH2/: run.py
Examples/Benzene/: run.py  submit.sh
Examples/NWChem/: BeH2.ipynb
H3lin_test/: 1_8_H3lin_OrbitalTranslator.json  1_8_H3lin_SpinorbOpt.json  1_8_alpha_1rdm.npy  1_8_alpha_alpha_2rdm.npy  1_8_alpha_beta_2rdm.npy  1_8_alpha_coeffs.npy  1_8_beta_1rdm.npy  1_8_beta_coeffs.npy  1_8_geometry_H3lin.mol  SpinorbOpt_energies_test_0.json  SpinorbOpt_energies_test_1.json  SpinorbOpt_energies_test_2.json  SpinorbOpt_energies_test_3.json  alpha_alpha_gtensor.npy  alpha_beta_gtensor.npy  alpha_hmatrix.npy  alpha_orbital_0.00000  alpha_orbital_1.00000  alpha_orbital_2.00000  beta_beta_gtensor.npy  beta_hmatrix.npy  beta_orbital_0.00000  beta_orbital_1.00000  beta_orbital_2.00000
HeH_test/coeffs_631g/: 22676711863_alpha_coeffs.npy  22676711863_beta_coeffs.npy
HeH_test/coeffs_sto3g/: 120_alphacoeffs.npy  120_betacoeffs.npy  22676711863_alpha_coeffs.npy  22676711863_beta_coeffs.npy
HeH_test/geometry/: HeH.mol
HeH_test/json/: HeH_orbtrans.json  HeH_spinorbopt.json
HeH_test/multiwavelets_631g/: alpha_orbital_0.00000  alpha_orbital_1.00000  alpha_orbital_2.00000  alpha_orbital_3.00000  beta_orbital_0.00000  beta_orbital_1.00000  beta_orbital_2.00000  beta_orbital_3.00000
HeH_test/multiwavelets_sto3g/: alpha_orbital_0.00000  alpha_orbital_1.00000  beta_orbital_0.00000  beta_orbital_1.00000
HeH_test/output/: SpinorbOpt_energies_orthosym.json  SpinorbOpt_energies_test.json
HeH_test/rdms_631g/: 22676711863_alpha_1rdm.npy  22676711863_alpha_alpha_2rdm.npy  22676711863_alpha_beta_2rdm.npy  22676711863_beta_1rdm.npy  22676711863_beta_beta_2rdm.npy
Json_files/: SpinorbOpt_energies_test.json  h3lin_sto3g_inp.json
Json_files/input_orbtrans/: h2_631g_inp.json  h2_sto3g_inp.json  h3lin_631g_inp.json  h3lin_sto3g_inp.json  h3tri_631g_inp.json  h3tri_sto3g_inp.json
Json_files/input_spinorbt/: h2_sto3g_inp.json  h3lin_631g_inp.json  h3lin_sto3g_inp.json  h3tri_631g_inp.json  h3tri_sto3g_inp.json
Pyscf/: FCI_h2_h3.ipynb  H2m_ccpvdz_alpha.molden  H2m_ccpvdz_beta.molden  H3lin_ccpvdz_alpha.molden  H3lin_ccpvdz_beta.molden  H3tri_ccpvdz_alpha.molden  H3tri_ccpvdz_beta.molden  UHF_UCASSCF_H2_H3.ipynb  h2_h3_ccpvdz.ipynb
automate_process/: create_jsonfile.py  dmrg_loop.py  dmrg_loop_H3lin_test_output.out  masterscript_spinorbital_refinement.py  nohup_05_36_H3lin.out  nohup_1_0 to 1_4_H3lin.out  nohup_H3lin.out  nohup_H3tri_05_09.out  nohup_H3tri_10_70.out  nohup_HeH_orthosym.out  nohup_failed_H3lin_631g.out  run_only_spinorbital_refinement.py
automate_process/2_26767119_HeH_test/: 2_26767119_HeH_OrbitalTranslator.json  2_26767119_HeH_SpinorbOpt.json  2_26767119_alpha_coeffs.npy  2_26767119_beta_coeffs.npy  2_26767119_geometry_HeH.mol  SpinorbOpt_energies.json  alpha_orbital_0.00000  alpha_orbital_1.00000  beta_orbital_0.00000  beta_orbital_1.00000
coefficients/h2_631g_coeffs/: uhf_h2_631g_08_alphacoeffs.npy  uhf_h2_631g_08_betacoeffs.npy
docs/: NWChem_BeH2.ipynb  _config.yml  _toc.yml  intro.md
eigensolver_test/: eigensolver.py
examples/: ci.py  cisd.py  compare_to_gaussian.py  custom_pot.py  dmrg.py  ethane.py  fci.py  gradient.py  methods.py  minbas.py  nwchem_beh2.py  open_shell_refinement_w_nwchem.py  ortho_test.py  pno.py  qdot_pot.py  qdot_shortened.py  qdot_shortened2D.py  spa.py  spa_from_ao.py  spa_sto3g.py
geometry/: H2m_min_sto3g.mol  H3_lin_min.mol  H3_tri.mol  H3_tri_min.mol
integrals_nanobind/: CMakeLists.txt  integrals.cpp  integrals.hpp  main.cpp
integrals_ref/: CMakeLists.txt  integrals.cpp  integrals.hpp  main.cpp
integrals_run_example/: run.py
madness_extension/: CMakeLists.txt  MadnessProcess.hpp  functionsaver.hpp  main.cpp  optimization.cpp  optimization.hpp  pno_interface.hpp  sum_of_gaussians.hpp
madness_programs/orbital_translation/: CMakeLists.txt  main.cpp  translator.cpp  translator.hpp
madness_programs/spinorb_opt/: CMakeLists.txt  main.cpp  spinorb_optimizer.cpp  spinorb_optimizer.hpp
nwchem_to_orbopt/: CMakeLists.txt  converter.cpp  converter.hpp  main.cpp
orbital_optimization/: CMakeLists.txt  main.cpp  optimization.cpp  optimization.hpp  orbital.hpp
src/: Functor_test.hpp  MadnessProcess.cpp  MadnessProcess.hpp  PyFuncFactory.hpp  coulomboperator_nd.hpp  eigensolver.cpp  eigensolver.hpp  functionsaver.hpp  guesses.h  guesses.hpp  integrals.cpp  integrals.hpp  integrals_open_shell.cpp  integrals_open_shell.hpp  madmolecule.cpp  madmolecule.hpp  madness_process.cpp  madness_process.hpp  main.cpp  minbas.hpp  moleculargeometry.cpp  moleculargeometry.hpp  molecule.hpp  npy.hpp  nwchem_converter.cpp  nwchem_converter.hpp  nwchem_converter_open_shell.cpp  nwchem_converter_open_shell.hpp  optimization.cpp  optimization.hpp  optimization_open_shell.cpp  optimization_open_shell.hpp  plot.hpp  pno_interface.hpp  pyfuncfactory.hpp  sum_of_gaussians.hpp  transformator.hpp
tests/: simple_test.py  test_basics.py  test_methods.py  test_methods_fc.py  test_pyscf.py
ucc_vqe/: uccs.py  uccsd.py
(+1113 files in other folders)
