[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "madness"]
build-backend = "scikit_build_core.build"

[project]
name = "madpy"
version = "0.0.1"
description = "Python interface for Orbital Refinement"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@address.com" },
]
classifiers = [
    "License :: ???",
]
dependencies = [
    "numpy", "pyscf", "qulacs", "tequila-basic", "block2", "nanobind"
]

[project.urls]
Homepage = "https://github.com/..."

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
