[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "madness"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake]
args =[ 
  "-DCMAKE_CXX_FLAGS=-O3 -DNDEBUG -fcolor-diagnostics",
  "-DCMAKE_COLOR_MAKEFILE=ON",
  "-DCMAKE_CXX_FLAGS=-w",  # or use -Wno-everything if using Clang
  "-DCMAKE_C_FLAGS=-w"     # optional for pure C files
]
#generator = "Ninja"


[project]
name = "frayedends"
version = "0.0.1"
description = "Python interface for Orbital Refinement"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@address.com" },
]
classifiers = [
    "License :: ???",
]
dependencies = [
    "numpy", "pyscf", "qulacs", "tequila-basic", "block2", "nanobind", "geometric",
    "black>=24.4.2",
    "isort>=5.10.0",
    "clang-format>=17.0.6"
]

[project.urls]
Homepage = "https://github.com/..."

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
